--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inforce",
-  "homepage": "https://AndryKK.github.io/inforce-test",
+  "homepage": "https://github.io/AndryKK/inforce-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
